@@ -1,4 +1,6 @@
 Version 1.7.11+svn:
+ * AI
+   * Fixed unit_at formula ai function to return null on null input.
  * Language and i18n:
    * Updated translations: Finnish, German, Italian, Latin, Russian,
      Shavian
